templates/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          strip_any_host_port: false
          upgrade_configs:
          - upgrade_type: websocket
          scheme_header_transformation:
            scheme_to_overwrite: https
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: nomad
              require_tls: EXTERNAL_ONLY
              domains: ["${nomad_host}"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: nomad
            - name: fabio
              require_tls: EXTERNAL_ONLY
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fabio
            - name: fabio_ui
              require_tls: EXTERNAL_ONLY
              domains: ["${fabio_ui_host}"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fabio_ui
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: nomad
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: nomad
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${upstream_host}
                port_value: ${upstream_port}
  - name: fabio
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: fabio
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${upstream_host}
                port_value: ${fabio_proxy_port}
  - name: fabio_ui
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: fabio_ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ${upstream_host}
                port_value: ${fabio_ui_port}
